fixed alignment issues on desktop view

--- a/style.css
+++ b/style.css
@@ -41,10 +41,19 @@ main {
     line-height: 32px;
 }
 
-@media screen and (min-width: 900px) {
+@media (min-width: 900px) {
 
     .hero-section {
         padding-inline: 150px;
+    }
+
+    .hero-section p {
+        font-size: xx-large;
+    }
+
+    .hero-section h3 {
+        font-size: xx-large;
+        line-height: 40px;
     }
 
     .form {
@@ -61,7 +70,13 @@ main {
    }
 
    .email {
-       max-width: 30%;
+       max-width: 400px;
+       margin-top: 17px;
+   }
+
+   .email-again {
+       max-width: 400px;
+
    }
 
    .second-section-content {
@@ -70,10 +85,6 @@ main {
        margin: auto;
    }
 
-   .form-again {
-       display: flex;
-       align-items: center;
-   }
 
 }
 
